--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 1 Roman Panchuk</title>
   </head>
-  <body></body>
-  <script src="./js/task-1.js"></script>
-  <script src="./js/task-2.js"></script>
-  <script src="./js/task-3.js"></script>
+  <body>
+    <script src="./js/task-1.js"></script>
+    <script src="./js/task-2.js"></script>
+    <script src="./js/task-3.js"></script>
+  </body>
 </html>
